--- a/src/css/main.css
+++ b/src/css/main.css
@@ -1,4 +1,34 @@
-.logo{
-    width: 25%;
-    height: 25%;
+*{
+    padding:0 ;
+    margin: 0;
+    box-sizing: border-box;
+}
+body {background-color: #40865b;
+display: flex;
+width: 100vh;
+justify-content: center;
+align-items: center;
+
+}
+
+
+
+.container{display: flex;
+    text-align:;
+    width: 850px;;
+}
+.left { background-color: #f35e35;
+    text-align: center;
+display: flex;
+    flex-direction: column;
+    padding: 40px 30px;
+    justify-content: center;
+    gap: 14px;}
+.right{
+    background-color: #d98f71;
+    display: flex;
+    flex-direction: column;
+    padding: 40px 30px;
+    justify-content: center;
+    gap: 14px;
 }
