Update HTLM e CSS imc-cadastro

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -14,7 +14,7 @@ align-items: center;
 
 
 .container{display: flex;
-    text-align:;
+    text-align:center;
     width: 850px;;
 }
 .left { background-color: #f35e35;
