--- a/src/css/main.css
+++ b/src/css/main.css
@@ -4,7 +4,7 @@
   padding: 0;
 }
 .logo{
-  width: 240px;
+  width: 15rem;
   height: auto;
   display: block;
   margin: 0 auto;
@@ -19,17 +19,17 @@ body {
 
 .container {
   display: flex;
-  width: 850px;
-  border-radius: 12px;
+  width: 53.125rem;
+  border-radius: 0.75rem;
   overflow: hidden;
-  box-shadow: 0 8px 24px rgba(0, 0, 0, 0.2);
+  box-shadow: 0 0.5rem 1.5rem rgba(0, 0, 0, 0.2);
   background-color: white;
 }
 
 .left, .right {
     font-size: larger bold ;
     text-align: center;
-  padding: 40px 30px;
+  padding: 2.5rem 1.875rem;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -42,20 +42,20 @@ body {
 }
 
 .left img {
-  width: 50px;
-  margin-bottom: 20px;
+  width: 3.125rem;
+  margin-bottom: 1.25rem;
 }
 
 .left h1 {
-  font-size: 24px;
-  margin-bottom: 20px;
+  font-size: 1.5rem;
+  margin-bottom: 1.25rem;
 }
 
 .left button {
-  margin-top: 30px;
-  padding: 12px;
-  border: 2px solid white;
-  border-radius: 8px;
+  margin-top: 1.875rem;
+  padding: 0.75rem;
+  border: 0.125rem solid white;
+  border-radius: 0.5rem;
   background-color: transparent;
   color: white;
   font-weight: bold;
@@ -78,26 +78,26 @@ body {
 .right h1 {
     font-family: 'Poppins', sans-serif;
     font-weight: bolder;
-  font-size: 22px;
-  margin-bottom: 10px;
+  font-size: 1.375rem;
+  margin-bottom: 0.625rem;
 }
 
 .right p {font-family: 'poppins', sans-serif;
   font-weight: bolder   ;
-  margin-bottom: 25px;
+  margin-bottom: 1.5625rem;
 }
 
 
 
 input {
-  padding: 12px 15px;
-  margin: 7px;
+  padding: 0.75rem 0.9375rem;
+  margin: 0.4375rem;
   border: none;
-  border: radius 20px;
+  border-radius: 1.25rem;
   background-color: #e57b18;
   font-weight: bold;
   color: #2f2900;
-  box-shadow: 0 2px 5px rgba(0,0,0,0.1);
+  box-shadow: 0 0.125rem 0.3125rem rgba(0,0,0,0.1);
 }
 
  input::placeholder {
@@ -105,14 +105,15 @@ input {
 }
 
 button {
-  width: 110px;
-  padding: 12px;
-  margin: 10px auto;
+  width: 6.875rem;
+  padding: 0.75rem;
+  margin: 0.625rem auto;
   display: block;
   background-color: #2f2900;
   color: white;
   border: none;
-  border-radius: 30px;
+  border-radius: 1.875rem;
+
   font-weight: bold;
   cursor: pointer;
   transition: background 0.3s ease;
@@ -122,7 +123,7 @@ button {
   background-color: #1e1b00;
 }
 .input {
-    margin-top: 10px;
-    margin-bottom: 10px;
+    margin-top: 0.625rem;
+    margin-bottom: 0.625rem;
 }
 h1,p{font-family: 'poppins';}
