--- a/src/css/dashboard.css
+++ b/src/css/dashboard.css
@@ -1,34 +1,64 @@
+* {
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+    font-family: 'poppins';
+
+}
+
+
 .container {
     display: flex;
-    flex-direction: row;
+    width: 1300px;
+    margin-top: 1rem;   
+
 }
 
+h1 { font-size: 22px;
+}
+
+.navegacao {
+    display: flex;
+    flex-direction: column;
+    align-items: start;
+    justify-content: space-around;
+    padding: 0.5rem;
+    background-color: #d77a10;
+    border-radius: 12px;
 
 
-.navegacao{
-   display: flex;
-  flex-direction: column;
-  justify-content: space-around;
-  gap:1rem;
-  padding: 2rem;
 
+    & a {
+        
+        margin-bottom: 1rem;
+        border-radius: 2rem;
+        width: 10rem;
+        height: 1rem;
+        align-items: center;
+        text-align: center;
 
-  & :link{
-    background-color: #2b2b2b;
-    
-    width: 10rem;
-    
+    }
+}
 
-  }
-} 
-
-.conteudo{
-    
+.conteudo {
+    display: flex;
+    flex-direction: column;    
     background-color: white;
-    width: 30rem;
-    margin-top: 2rem;
-    height: 50rem;
+    width: 75rem;
+    height: 38rem;
+    border-radius: 12px;
+    
+    & div {
+        margin-bottom: 3rem;
+        
+    }
+
+
 }
-body{
-    background-color: #2b2b2b;
+
+body {
+    background-color: #d77a10;
+    display: flex;
+    justify-content: center;
+
 }
