--- a/src/css/imc-cadastro.css
+++ b/src/css/imc-cadastro.css
@@ -2,6 +2,7 @@
   box-sizing: border-box;
   margin: 0;
   padding: 0;
+  font-family: 'poppins'
 }
 
 body {
@@ -24,6 +25,7 @@ body {
 .left, .right {
   padding: 40px 30px;
   display: flex;
+  align-items: center ;
   flex-direction: column;
   justify-content: center;
 }
@@ -32,11 +34,14 @@ body {
   width: 40%;
   background-color: #2f2900;
   color: white;
+
+
 }
 
 .left img {
-  width: 50px;
+  width: 100px;
   margin-bottom: 20px;
+  
 }
 
 .left h1 {
