--- a/src/css/main.css
+++ b/src/css/main.css
@@ -93,7 +93,7 @@ input {
   padding: 0.75rem 0.9375rem;
   margin: 0.4375rem;
   border: none;
-  border-radius: 1.25rem;
+  border-radius: 8px;
   background-color: #e57b18;
   font-weight: bold;
   color: #2f2900;
@@ -112,7 +112,7 @@ button {
   background-color: #2f2900;
   color: white;
   border: none;
-  border-radius: 1.875rem;
+  border-radius: 8px;
 
   font-weight: bold;
   cursor: pointer;
