--- a/src/css/main.css
+++ b/src/css/main.css
@@ -93,7 +93,7 @@ input {
   padding: 0.75rem 0.9375rem;
   margin: 0.4375rem;
   border: none;
-  border-radius: 8px;
+  border-radius: 0.5rem;
   background-color: #e57b18;
   font-weight: bold;
   color: #2f2900;
@@ -112,8 +112,7 @@ button {
   background-color: #2f2900;
   color: white;
   border: none;
-  border-radius: 8px;
-
+  border-radius: 0.5rem;
   font-weight: bold;
   cursor: pointer;
   transition: background 0.3s ease;
