--- a/src/css/main.css
+++ b/src/css/main.css
@@ -1,8 +1,4 @@
-* {
-  box-sizing: border-box;
-  margin: 0;
-  padding: 0;
-}
+@import url(./global.css);
 .logo{
   width: 19.8rem;
   height: auto;
