--- a/src/css/dashboard.css
+++ b/src/css/dashboard.css
@@ -4,6 +4,17 @@
   padding: 0;
   box-sizing: border-box;
 }
+.fade-in {
+  opacity: 0;
+  animation: fadeIn 1s ease forwards;
+}
+
+/* Animação */
+@keyframes fadeIn {
+  to {
+    opacity: 1;
+  }
+}
 
 body {
   font-family: "Poppins", sans-serif;
@@ -74,6 +85,10 @@ body {
   padding: 0.5rem 1rem;
   border-radius: 8px;
   transition: background-color 0.3s, color 0.3s;
+  
+  .navegacao a.dashboard {
+  color: #f7f9fc;
+ }
 }
 
 .navegacao a:hover,
