--- a/src/css/historico.css
+++ b/src/css/historico.css
@@ -1,5 +1,147 @@
+@import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.13.1/font/bootstrap-icons.min.css");
+.fade-in {
+  opacity: 0;
+  animation: fadeIn 0.5s ease forwards;
+}
+
+/* Animação */
+@keyframes fadeIn {
+  to {
+    opacity: 1;
+  }
+}
 * {
-  box-sizing: border-box;
   margin: 0;
   padding: 0;
+  box-sizing: border-box;
+}
+
+body {
+  font-family: "Poppins", sans-serif;
+  background-color: #d77a10;
+  color: #333;
+  height: 100vh;
+}
+
+.container {
+  display: flex;
+  align-items: flex-start;
+  width: 100%;
+  max-width: 1400px;
+  margin: auto;
+  gap: 2rem;
+  padding: 2rem;
+  flex-wrap: wrap;
+}
+
+.navegacao {
+  flex: px;
+  min-height: 90vh;
+  background-color: #d77a10;
+  color: white;
+  padding: rem 1rem;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  border-radius: 1rem;
+}
+
+.navegacao h1 {
+  font-size: 2rem;
+  margin-bottom: 1rem;
+}
+
+.navegacao img {
+  width: 100px;
+  height: 90px;
+  border-radius: 50%;
+  object-fit: cover;
+  margin-bottom: 0.5rem;
+}
+
+.navegacao p {
+  font-size: 1rem;
+  color: #2b2b2b;
+}
+
+.perfil {
+  color:#2b2b2b;
+  background-color: #f7f9fc;
+  margin-bottom: 1.5rem;
+  padding: 1.5rem;
+  border-radius: 1rem;
+  box-shadow: 0 2px 6px rgba(0, 0, 0, 0.06);
+  font-weight: 500;
+  
+}
+
+.navegacao a {
+  font-size: larger;
+  display: block;
+  margin: 1rem 0;
+  text-decoration: none;
+  color: #2b2b2b;
+  font-weight: 500;
+  padding: 0.5rem 1rem;
+  border-radius: 8px;
+  transition: background-color 0.3s, color 0.3s;
+}
+
+.navegacao a:hover,
+.navegacao a:focus {
+  color: white;
+  background-color: #462e17;
+}
+
+.conteudo {
+  min-height: 90vh;
+  flex: 1;
+  display: flex;
+  gap: 2rem;
+  background-color: white;
+  border-radius: 1rem;
+  padding: 2rem;
+  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.10);
+}
+
+.conteudo > div {
+  background-color: #f7f9fc;
+  margin-bottom: 1.5rem;
+  padding: 1.5rem;
+  border-radius: 1rem;
+  box-shadow: 0 2px 6px rgba(0, 0, 0, 0.10);
+  font-weight: 500;
+}
+
+.conteudo a {
+  display:flex;
+  margin-bottom: 2rem;
+  background-color: #4caf50;       
+  color: white;                    
+  padding: 12px 24px;              
+  border-radius: 8px;              
+  text-decoration: none;          
+  font-size: 16px;                
+  font-weight: 600;
+  transition: background-color 0.3s ease, transform 0.2s ease;
+  box-shadow: 0 4px 8px rgba(0,0,0,0.10);
+}
+
+
+@media (max-width: 1024px) {
+  .container {
+    flex-direction: column;
+    padding: 1rem;
+  }
+
+  .navegacao,
+  .sidebar-direita {
+    width: 100%;
+    flex: none;
+    margin-bottom: 1rem;
+  }
+
+  .conteudo {
+    width: 100%;
+  }
 }
