--- a/src/css/imc-cadastro.css
+++ b/src/css/imc-cadastro.css
@@ -1,4 +1,5 @@
 * {
+  border: none;
   box-sizing: border-box;
   margin: 0;
   padding: 0;
@@ -102,7 +103,8 @@ form input::placeholder {
   color: #654f00;
 }
 
-form button {
+.button{
+  text-align: center;
   padding: 0.75rem;
   background-color: #2f2900;
   color: white;
@@ -113,6 +115,6 @@ form button {
   transition: background 0.3s ease;
 }
 
-form button:hover {
+.button:hover {
   background-color: #1e1b00;
 }
