--- a/src/css/main.css
+++ b/src/css/main.css
@@ -1,4 +1,17 @@
 @import url(./global.css);
+
+.fade-in {
+  opacity: 0;
+  animation: fadeIn 1s ease forwards;
+}
+
+/* Animação */
+@keyframes fadeIn {
+  to {
+    opacity: 1;
+  }
+}
+
 .logo{
   width: 19.8rem;
   height: auto;
