--- a/src/css/dashboard.css
+++ b/src/css/dashboard.css
@@ -98,9 +98,10 @@ body {
 }
 
 .conteudo {
+  min-width: 70%;
+  max-width: 100%;
   min-height: 90vh;
   flex: 1;
-  display: flex;
   gap: 2rem;
   background-color: white;
   border-radius: 1rem;
@@ -108,7 +109,9 @@ body {
   box-shadow: 0 2px 10px rgba(0, 0, 0, 0.10);
 }
 
+
 .conteudo > div {
+  display: flex;
   background-color: #f7f9fc;
   margin-bottom: 1.5rem;
   padding: 1.5rem;
@@ -186,4 +189,10 @@ body {
   border-left: 5px solid #4caf50;
   border-radius: 10px;
   box-shadow: 0 2px 8px rgba(0,0,0,0.10);
+}
+
+.avatar-3d{
+  & img {
+    
+  }
 }
