--- a/src/css/treino2.css
+++ b/src/css/treino2.css
@@ -94,9 +94,10 @@ body {
 }
 
 .conteudo {
-  min-height: 90vh;
+  min-height: 92vh;
   flex: 1;
   display: flex;
+  flex-direction: column;
   gap: 2rem;
   background-color: white;
   border-radius: 1rem;
@@ -104,13 +105,27 @@ body {
   box-shadow: 0 2px 10px rgba(0, 0, 0, 0.10);
 }
 
+.conteudo h1 {
+  display: flex;
+  background-color: blue;
+  flex-wrap: wrap;
+  height: 3rem;
+  border-radius: 1rem;
+  width: 15rem;
+  
+
+}
 .conteudo > div {
+  
   background-color: #f7f9fc;
   margin-bottom: 1.5rem;
   padding: 1.5rem;
   border-radius: 1rem;
-  box-shadow: 0 2px 6px rgba(0, 0, 0, 0.10);
+  box-shadow: 0 2px 6px rgba(0, 0, 0, 0.30);
   font-weight: 500;
+  display: flex;
+  flex-direction: row;
+  flex: 1;
 }
 
 .conteudo a {
@@ -126,6 +141,17 @@ body {
   transition: background-color 0.3s ease, transform 0.2s ease;
   box-shadow: 0 4px 8px rgba(0,0,0,0.10);
 }
+.conteudo p{
+  
+  width:9rem;
+  display: flex;
+  flex-direction: row;
+
+  
+
+  
+
+}
 
 
 @media (max-width: 1024px) {
@@ -134,7 +160,7 @@ body {
     padding: 1rem;
   }
 
-  .navegacao,
+  .navegacao
   .sidebar-direita {
     width: 100%;
     flex: none;
@@ -143,5 +169,13 @@ body {
 
   .conteudo {
     width: 500%;
+    display: flex;
+    flex-direction: column;
   }
+  
+
 }
+ input {
+  width: 8.5rem;
+  
+ }
