--- a/src/css/dashboard.css
+++ b/src/css/dashboard.css
@@ -192,7 +192,41 @@ body {
 }
 
 .avatar-3d{
-  & img {
+  text-align: center;
+  position: absolute;
+  width: 100%;
+  max-width: 400px;
+
+  .texto-sobre {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
     
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+
+    background-color: rgba(199, 194, 194, 0.4);
+    color: white;
+    text-align: center;
+    border-radius: 10px;
   }
+
+  & h2 {
+    font-size: 30px;
+    color: red;
+  }
+
+  & img {
+    width: 100%;
+    display: block;
+    border-radius: 10px;
+
+  }
+
+
+  
 }
