--- a/src/css/diario.css
+++ b/src/css/diario.css
@@ -94,6 +94,8 @@ body {
 }
 
 .conteudo {
+  display: flex;
+  flex-direction: column;
   min-height: 90vh;
   flex: 1;
   display: flex;
@@ -112,7 +114,12 @@ body {
   box-shadow: 0 2px 6px rgba(0, 0, 0, 0.10);
   font-weight: 500;
 }
-
+#diario-conteudo{
+  text-align: center  ;
+  display: flex;
+  align-items: center;
+  align-content: center;
+}
 .conteudo a {
   display:flex;
   margin-bottom: 2rem;
@@ -127,6 +134,15 @@ body {
   box-shadow: 0 4px 8px rgba(0,0,0,0.10);
 }
 
+#noteInput {
+  width: 100%;
+  min-height: 120px;
+  padding: 15px;
+  font-size: 16px;
+  border: 2px solid #ddd;
+  border-radius: 8px;
+  resize: vertical;
+}
 
 @media (max-width: 1024px) {
   .container {
