--- a/src/css/treino.css
+++ b/src/css/treino.css
@@ -8,56 +8,88 @@
 .container {
   display: flex;
   align-items: flex-start;
-  width: 100%;
+  width: 90%;
   max-width: 1400px;
   margin: auto;
   gap: 2rem;
   padding: 2rem;
   flex-wrap: wrap;
-
-
-}
-
-h1 {
-    font-size: 1.375rem;
+  
+ 
 }
 
 .navegacao {
-    display: flex;
-    flex-direction: column;
-    align-items: start;
-    justify-content: space-around;
-    padding: 0.5rem;
-    background-color: #d77a10;
-    border-radius: 0.75rem;
-
-
-
-    & a {
-
-        margin-bottom: 1rem;
-        border-radius: 2rem;
-        width: 10rem;
-        height: 1rem;
-        align-items: center;
-        text-align: center;
-
-    }
+  flex: px;
+  min-height: 90vh;
+  background-color: #d77a10;
+  color: white;
+  padding: rem 1rem;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  border-radius: 1rem;
+  margin-right: 1rem;
 }
 
-.treino-conteudo {
-    display: flex;
-    flex-direction: column-reverse;
+.navegacao h1 {
+  font-size: 2rem;
+  margin-bottom: 1rem;
+ 
 }
+
+.navegacao img {
+  width: 100px;
+  height: 90px;
+  border-radius: 50%;
+  object-fit: cover;
+  margin-bottom: 0.5rem;
+}
+
+.navegacao p {
+  font-size: 1rem;
+  color: #2b2b2b;
+}
+
+.perfil {
+  color:#2b2b2b;
+  background-color: #f7f9fc;
+  margin-bottom: 1.5rem;
+  padding: 1.5rem;
+  border-radius: 1rem;
+  box-shadow: 0 2px 6px rgba(0, 0, 0, 0.06);
+  font-weight: 500;
+  
+}
+
+.navegacao a {
+  font-size: larger;
+  display: block;
+  margin: 1rem 0;
+  text-decoration: none;
+  color: #2b2b2b;
+  font-weight: 500;
+  padding: 0.5rem 1rem;
+  border-radius: 8px;
+  transition: background-color 0.3s, color 0.3s;
+}
+
+.navegacao a:hover,
+.navegacao a:focus {
+  color: white;
+  background-color: #462e17;
+}
+
 
 .conteudo {
     display: flex;
     flex-direction: column;
     background-color: white;
     width: 75rem;
-    height: 38rem;
+    
     border-radius: 0.75rem;
     align-items: center;
+    padding-left: 1rem;
+  
     
 
     & div {
@@ -70,6 +102,14 @@ h1 {
         font-weight: 500;
         flex: 1;
         border: 1px ;
+       
+    } 
+
+    & > div {
+        gap: 12px;
+    }
+    & h1 {
+        align-items: self-start;
     }
 
     & p {
