--- a/src/css/dashboard.css
+++ b/src/css/dashboard.css
@@ -9,7 +9,7 @@
   animation: fadeIn 1s ease forwards;
 }
 
-/* Animação */
+
 @keyframes fadeIn {
   to {
     opacity: 1;
@@ -27,19 +27,18 @@ body {
   display: flex;
   align-items: flex-start;
   width: 100%;
-  max-width: 1400px;
+
   margin: auto;
-  gap: 2rem;
-  padding: 2rem;
+  gap: 1rem; 
+  padding: 1.5rem;
   flex-wrap: wrap;
 }
 
 .navegacao {
-  flex: px;
+  flex: 0 0 250px;
   min-height: 90vh;
   background-color: #d77a10;
   color: white;
-  padding: rem 1rem;
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
@@ -98,16 +97,17 @@ body {
 }
 
 .conteudo {
-  min-width: 70%;
-  max-width: 100%;
-  min-height: 90vh;
+  min-height: 92vh;
   flex: 1;
+  display: flex;
+  flex-direction: column;
   gap: 2rem;
   background-color: white;
   border-radius: 1rem;
   padding: 2rem;
   box-shadow: 0 2px 10px rgba(0, 0, 0, 0.10);
 }
+
 
 
 .conteudo > div {
