--- a/src/css/diario.css
+++ b/src/css/diario.css
@@ -4,7 +4,7 @@
   animation: fadeIn 0.5s ease forwards;
 }
 
-/* Animação */
+
 @keyframes fadeIn {
   to {
     opacity: 1;
@@ -27,19 +27,19 @@ body {
   display: flex;
   align-items: flex-start;
   width: 100%;
-  max-width: 1400px;
+
   margin: auto;
-  gap: 2rem;
-  padding: 2rem;
+  gap: 1rem; 
+  padding: 1.5rem; 
   flex-wrap: wrap;
 }
 
 .navegacao {
-  flex: px;
+  
+  flex: 0 0 250px;
   min-height: 90vh;
   background-color: #d77a10;
   color: white;
-  padding: rem 1rem;
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
@@ -94,25 +94,25 @@ body {
 }
 
 .conteudo {
-  display: flex;
-  flex-direction: column;
+  flex-grow: 1;
+  min-width: 0; 
   min-height: 90vh;
+  gap: 2rem;
+  background-color: white;
+  border-radius: 1rem;
+  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+}
+
+.conteudo {
+  min-height: 92vh;
   flex: 1;
   display: flex;
+  flex-direction: column;
   gap: 2rem;
   background-color: white;
   border-radius: 1rem;
   padding: 2rem;
   box-shadow: 0 2px 10px rgba(0, 0, 0, 0.10);
-}
-
-.conteudo > div {
-  background-color: #f7f9fc;
-  margin-bottom: 1.5rem;
-  padding: 1.5rem;
-  border-radius: 1rem;
-  box-shadow: 0 2px 6px rgba(0, 0, 0, 0.10);
-  font-weight: 500;
 }
 #diario-conteudo{
   text-align: center  ;
