--- a/src/css/receitas.css
+++ b/src/css/receitas.css
@@ -28,18 +28,19 @@ body {
   display: flex;
   align-items: flex-start;
   width: 100%;
-  max-width: 1400px;
+
   margin: auto;
-  gap: 2rem;
-  padding: 2rem;
+  gap: 1rem; 
+  padding: 1.5rem;
   flex-wrap: wrap;
 }
 
+
 .navegacao {
+  flex: 0 0 250px;
   min-height: 90vh;
   background-color: #d77a10;
   color: white;
-  padding: 1rem;
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
