--- a/src/css/treino.css
+++ b/src/css/treino.css
@@ -8,7 +8,7 @@
 .container {
   display: flex;
   align-items: flex-start;
-  width: 90%;
+  width: 100%;
   max-width: 1400px;
   margin: auto;
   gap: 2rem;
@@ -23,12 +23,12 @@
   min-height: 90vh;
   background-color: #d77a10;
   color: white;
-  padding: rem 1rem;
+  padding:1rem;
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
   border-radius: 1rem;
-  margin-right: 1rem;
+  margin-top: 2rem;
 }
 
 .navegacao h1 {
@@ -64,7 +64,7 @@
 .navegacao a {
   font-size: larger;
   display: block;
-  margin: 1rem 0;
+  margin: 1rem;
   text-decoration: none;
   color: #2b2b2b;
   font-weight: 500;
@@ -84,11 +84,11 @@
     display: flex;
     flex-direction: column;
     background-color: white;
-    width: 75rem;
-    
+    width: 75rem;    
     border-radius: 0.75rem;
     align-items: center;
     padding-left: 1rem;
+    margin-top: 3rem;
   
     
 
@@ -102,14 +102,20 @@
         font-weight: 500;
         flex: 1;
         border: 1px ;
+        width: 70rem;
        
+       
+    }
+    .input-section {
+        
+        width: 65rem;
+        flex: 1;
+
     } 
 
     & > div {
-        gap: 12px;
-    }
-    & h1 {
-        align-items: self-start;
+        gap: 8px;
+        
     }
 
     & p {
@@ -129,20 +135,21 @@
         display: flex;
         flex-direction: column;
         align-items: center;
-        padding: 0.5rem;
-        
+               
     }
 
     & input {
         border-radius: 3rem;
         text-align: center;
+        
 
     }
 
 
     button {
         border-radius: 1rem;
-        width: 9rem;
+        width: 8rem;
+        margin-top: 7px;
     }
 
 }
@@ -150,7 +157,7 @@
 body {
     background-color: #d77a10;
     display: flex;
-    justify-content: center;
+   
 
 
 }
