--- a/src/css/diario.css
+++ b/src/css/diario.css
@@ -123,6 +123,21 @@ body {
   box-shadow: 0 2px 6px rgba(0, 0, 0, 0.10);
   font-weight: 500;
 }
+
+.diario-1, .diario-2, .diario-3 {
+  background-color: #ffffff;
+  margin-bottom: 2rem;
+  border-radius: 1rem;
+}
+
+.diario-1 {
+  margin-top: 2rem;
+}
+
+.data {
+  text-align: right;
+  margin-right: -2px;
+}
 #diario-conteudo{
   text-align: center  ;
   display: flex;
