--- a/src/css/dashboard.css
+++ b/src/css/dashboard.css
@@ -113,16 +113,18 @@ body {
 .conteudo > div {
   display: flex;
   background-color: #f7f9fc;
-  margin-bottom: 1.5rem;
   padding: 1.5rem;
   border-radius: 1rem;
   box-shadow: 0 2px 6px rgba(0, 0, 0, 0.10);
   font-weight: 500;
+  justify-content: space-between;
+  
+  
+  
 }
 
 .conteudo a {
   display:flex;
-  margin-bottom: 2rem;
   background-color: #4caf50;       
   color: white;                    
   padding: 12px 24px;              
@@ -132,6 +134,7 @@ body {
   font-weight: 600;
   transition: background-color 0.3s ease, transform 0.2s ease;
   box-shadow: 0 4px 8px rgba(0,0,0,0.10);
+  
 }
 
 .progresso-container {
@@ -140,6 +143,9 @@ body {
   border-radius: 25px;
   overflow: hidden;
   margin-top: 10px;
+  display: flex;
+  
+
 }
 
 .progresso-bar {
@@ -150,6 +156,9 @@ body {
   color: white;
   transition: width 0.4s ease;
   font-size: 0.9rem;
+} & p {
+  display: flex;
+  justify-content: space-between;
 }
 
 .consumos{
@@ -214,7 +223,7 @@ body {
   margin: 0 auto;
   width: 100%;
   max-width: 400px;
-  background-color: rgba(199, 194, 194, 0.4);
+  background-color:(199, 194, 194, 0.4);
   border-radius: 10px;
 
   .texto-sobre {
@@ -228,7 +237,7 @@ body {
     align-items: center;
 
     
-    color: white;
+    color: black;
     text-align: center;
     
   }
