--- a/src/css/dashboard.css
+++ b/src/css/dashboard.css
@@ -35,6 +35,7 @@ body {
 }
 
 .navegacao {
+  font-size: larger;
   flex: 0 0 250px;
   min-height: 90vh;
   background-color: #d77a10;
@@ -106,6 +107,22 @@ body {
   border-radius: 1rem;
   padding: 2rem;
   box-shadow: 0 2px 10px rgba(0, 0, 0, 0.10);
+
+  & .streak {
+    margin-bottom: 2rem;
+    display: flex;
+    flex-direction:column;
+    & .icon {
+      display: flex;
+      align-items: center;
+    }
+    & p {
+      font-size: larger;
+    }
+    & img {
+      width: 2rem;
+    } 
+  }
 }
 
 
@@ -117,7 +134,8 @@ body {
   border-radius: 1rem;
   box-shadow: 0 2px 6px rgba(0, 0, 0, 0.10);
   font-weight: 500;
-  justify-content: space-between;
+  gap: 5rem;
+  
   
   
   
@@ -256,4 +274,38 @@ body {
 
 
   
+}
+
+.avatar-ia {
+  display: flex;
+  margin-top: 1rem;
+  align-items: center;
+  & img {
+    background-color: #ffffff;
+    height: 90px;
+    border-radius: 50%;
+    border-style:solid;
+    object-fit: cover;
+    margin-bottom: 0.5rem;
+    width: 5rem;
+  }
+  & p {
+    margin-left: 0.5rem;
+    font-size: small;
+  }
+  & a {
+    margin-top: 0.5rem;
+    margin-left: 0.5rem;
+  }
+}
+
+.visao{
+  display: flex;
+  justify-content: space-between;
+  
+  & div {
+    display:flex ;
+    align-items:center;
+    gap: 1rem;
+  }
 }
