--- a/src/css/chat-gpt.css
+++ b/src/css/chat-gpt.css
@@ -72,6 +72,9 @@ body {
   box-shadow: 0 2px 6px rgba(0, 0, 0, 0.06);
   font-weight: 500;
 }
+.perfil #logout {
+  color: red;
+}
 
 .navegacao a {
   font-size: larger;
